feat/hero: setup hero content

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <div id="main-nav">
           <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#behind-the-wheel-lessons">Behind The Wheel Lessons</a></li>
-            <li><a href="#use-our-car">Use Our Car</a></li>
+            <li><a href="/index.html" aria-current="page">Home</a></li>
+            <li><a href="/behind-the-wheel-lessons.html">Behind The Wheel Lessons</a></li>
+            <li><a href="/use-our-car.html">Use Our Car</a></li>
           </ul>
         </div>
         
@@ -40,7 +40,7 @@
             </a>
           </div>
           
-          <button class="red-button">Sign In</button>
+          <a href="/login" class="sign-in-button">Sign In</a>
 
           <button class="hamburger" aria-label="Menu">
             <span></span><span></span><span></span>
@@ -49,9 +49,18 @@
       </nav>
     </header>
 
+    <!-- HERO Section -->
     <section id="hero" class="hero">
       <div class="hero-content">
-
+        <h1 class="hero-title">Astar Driving School</h1>
+        <p class="hero-tagline">Safety &#183; Experience &#183; Professionalism</p>
+        <div class="hero-actions">
+          <a class="btn-book" href="/booking">Book Now</a>
+          <p class="helper-subtext">or call</p>
+          <a class="hero-phone" href="tel:+17072545064" aria-label="Call Astar Driving School">707-254-5064</a>
+          <p class="helper-text">For an Appointment</p>
+        </div>
+        <p class="hero-subtitles">Astar Driving School has been established since 2008, with an excellent pass rate and price plans.</p>
       </div>
     </section>
 
