added nav-bar device responsiveness

--- a/use-our-car.html
+++ b/use-our-car.html
@@ -30,13 +30,13 @@
         <div id="right-nav">
           <div class="nav-icons-container">
             <a href="https://maps.app.goo.gl/wWsRM2hdctx1C44JA" target="_blank">
-              <img class="nav-icon" src="assets/google-icon.png">
+              <img class="nav-icon" src="assets/google-icon.svg">
             </a>
             <a href="https://www.facebook.com/p/Astar-Driving-School-100063541421469" target="_blank">
-              <img class="nav-icon" src="assets/facebook-icon.png">
+              <img class="nav-icon" src="assets/fb-icon.svg">
             </a>
             <a href="#location" target="_blank">
-              <img class="nav-icon" src="assets/location-icon.png">
+              <img class="nav-icon" src="assets/map-icon.svg">
             </a>
           </div>
           
