--- a/behind-the-wheel-lessons.html
+++ b/behind-the-wheel-lessons.html
@@ -15,7 +15,7 @@
       <nav class="navbar">
         <div id="logo">
           <a href="#home">
-            <img src="assets/logo.svg" alt="Astar Driving School logo">
+            <img src="assets/logo-with-border.svg" alt="Astar Driving School logo">
           </a>
         </div>
 
@@ -30,13 +30,13 @@
         <div id="right-nav">
           <div class="nav-icons-container">
             <a href="https://maps.app.goo.gl/wWsRM2hdctx1C44JA" target="_blank">
-              <img class="nav-icon" src="assets/google-icon.png">
+              <img class="nav-icon" src="assets/google-icon.svg">
             </a>
             <a href="https://www.facebook.com/p/Astar-Driving-School-100063541421469" target="_blank">
-              <img class="nav-icon" src="assets/facebook-icon.png">
+              <img class="nav-icon" src="assets/fb-icon.svg">
             </a>
             <a href="#location" target="_blank">
-              <img class="nav-icon" src="assets/location-icon.png">
+              <img class="nav-icon" src="assets/map-icon.svg">
             </a>
           </div>
           
