--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     
     <nav>
-      <a href="index.html" class="logo">
+      <a href="index.html" class="logo" >
         <img src="assets/logo-bold.svg" alt="Astar Driving School logo">
       </a>
 
@@ -245,6 +245,33 @@
           <img width="300px"  src="assets/image-9.jpg"alt="">
         </gallery-pictures>
       </section>
+
+      <!-- DRIVERS ED Section -->
+      <section class="drivers-ed">
+        <div class="dmv-resources">
+          <a></a>
+          <a>www.dmv.ca.gov</a>
+          <div>
+            <a></a>
+            <a></a>
+            <a></a>
+            <a></a>
+            <a></a>
+          </div>
+          <a>Book Appointment</a>
+        </div>
+        <div class="aceable">
+          <a></a>
+          <a></a>
+          <div>
+            <p>California Drivers Ed Online</p>
+            <a>Enroll Now</a>
+            <p>California Traffic School Online</p>
+            <a>Enroll Now</a>
+          </div>
+        </div>
+      </section>
+
       <!-- USE-OUR-CAR-LINK Section -->
       <section class="use-our-car-link">
         <p>Need a car for your driving test?</p>
