developed static use-our-car page

--- a/behind-the-wheel-lessons.html
+++ b/behind-the-wheel-lessons.html
@@ -51,9 +51,9 @@
 
   <main class="btw-main">
     <div class="btw-content">
-      <h1 class="btw-title">Behind The Wheel Lessons</h1>
-      <p class="btw-summary">Learn to drive with confidence through ASTAR&apos;s DMV-certified Behind the Wheel lessons. Our professional instructors provide patient, one-on-one training to help teens and adults master the skills needed for safe driving and DMV testing success.</p>
-      <p class="btw-note">Please contact us directly for an accurate and up-to-date pricing quote.</p>
+      <h1 class="page-title">Behind The Wheel Lessons</h1>
+      <p class="page-summary">Learn to drive with confidence through ASTAR&apos;s DMV-certified Behind the Wheel lessons. Our professional instructors provide patient, one-on-one training to help teens and adults master the skills needed for safe driving and DMV testing success.</p>
+      <p class="page-note">Please contact us directly for an accurate and up-to-date pricing quote.</p>
       <div class="btw-age-category">
         <button class="active">Teen</button>
         <button>Adult</button>
