--- a/use-our-car.html
+++ b/use-our-car.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="uoc-body">
   <nav>
     <a href="index.html" class="logo" >
       <img src="assets/logo-bold.svg" alt="Astar Driving School logo">
@@ -24,7 +24,7 @@
           <span class="label-short">Lessons</span>
         </a>
       </li>
-      <li aria-current="page" class="hamburger-item"><a href="/use-our-car.html">Use Our Car</a></li>
+      <li class="hamburger-item"><a aria-current="page" href="/use-our-car.html">Use Our Car</a></li>
     </ul>
     
     <div id="right-nav">
@@ -48,5 +48,30 @@
 
     </div>
   </nav>
+
+  <main class="uoc-main">
+    <div class="uoc-content">
+      <h1 class="page-title">Use Our Car</h1>
+      <p class="page-summary">We drive <span class="brand">Ford Mustangs</span> and <span class="brand">Dodge Chargers</span>. Not only are they cool and American made, but more importantly they are safe. Our cars are meticulously maintained and cleaned. Rest easy knowing that you or your child will be safe behind the wheel of our cars.</p>
+      <p class="page-note">Need a vehicle for your DMV road test? ASTAR provides a student car for testing. To qualify, you must book at least one lesson with us prior to using our car for the exam.</p>
+      <a class="bold-red-button">Book Lesson</a>
+      <img src="assets/astar-car-solo-unflipped.png">
+    </div>
+  </main>
+  <footer>
+  <img src="assets/logo-with-border.svg">
+  <div class="footer-links">
+    <a href="#facebook">Facebook</a>
+    <a href="#google-maps">Google Maps</a>
+    <a href="#Yelp">Yelp</a>
+  </div>
+  <div class="footer-contact">
+    <span>Jmapelastar@gmail.com</span>
+    <span>|</span>
+    <span>Tel: 707-254-5064</span>
+  </div>
+
+  <a>© 2025 by Team Genevieve</a>
+</footer>
 </body>
 </html>
