made about section desktop responsive

--- a/use-our-car.html
+++ b/use-our-car.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="uoc-body">
+<body class="main-nav-item" id="uoc-body">
   <nav>
     <a href="index.html" class="logo" >
       <img src="assets/logo-bold.svg" alt="Astar Driving School logo">
