--- a/behind-the-wheel-lessons.html
+++ b/behind-the-wheel-lessons.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="main-nav-item">
   <nav>
     <a href="index.html" class="logo" >
       <img src="assets/logo-bold.svg" alt="Astar Driving School logo">
