made services section desktop responsive

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
 
       <!-- ABOUT Section -->
-      <section id="about">
+      <section id="about" class="flex-column">
         <h1 class="section-title">
             Why Choose <span class="brand">Astar</span> Driving School
         </h1>
         
-        <div class="about-content">
+        <div class="about-content flex-column">
           <div class="about-first-row">
             <p class="value-prop">We are a <strong>full service driving school</strong> that offers adult and teen programs</p>
             <div class="about-astar px-20">
@@ -108,9 +108,9 @@
 
           <div class="about-second-row px-20">
             <div>
-              <div id="office-hours" class="second-row-item">
+              <div id="office-hours" class="second-row-item flex-column">
                 <div>
-                  <h2 class="h-32-700">Office Hours</h2>
+                  <h2 class="h-32 fw-700">Office Hours</h2>
                   <p class="kicker">We teach 7 days a week!</p>
                 </div>
                 
@@ -124,18 +124,18 @@
                   <dt>Saturday</dt><dd>Closed</dd>
                 </dl>
               </div>
-              <div id="programs-and-classes" class="second-row-item">
+              <div id="programs-and-classes" class="second-row-item flex-column">
                 <div>
-                  <h2 class="h-32-700">Programs &amp; Classes</h2>
+                  <h2 class="h-32 fw-700">Programs &amp; Classes</h2>
                   <p class="kicker">Contact us for our current pricing!</p>
                 </div>
-                <div class="programs-and-classes-content">
-                  <ul class="price-list">
+                <div class="programs-and-classes-content flex-column gap-20">
+                  <ul class="price-list flex-column gap-20">
                       <li><span class="item">Online Driver&rsquo;s Ed</span> at <span class="about-price">$50</span></li>
                       <li><span class="item">Classroom Driver&rsquo;s Ed</span> at <span class="about-price">$85</span></li>
                       <li><span class="item">Two-Hour Lesson</span> at <span class="about-price">$130</span></li>
                   </ul>
-                  <div class="about-actions" aria-label="Booking options">
+                  <div class="about-actions flex-column" aria-label="Booking options">
                     <div>
                       <a class="btn-black-24px-700 border-radius-10 px-24 padding-8-20" href="/booking">Book Now</a>
                       <span class="about-subtext px-16">or call</span>
@@ -143,7 +143,7 @@
                     </div>
                     <div>
                       <p class="about-subtext px-16">Not sure yet?</p>
-                      <a class="btn-check-availability px-20 padding-8-20" href="/availability">Check Availability</a>
+                      <a class="btn-check-availability px-20 padding-8-20 border-radius-10" href="/availability">Check Availability</a>
                     </div>
                     <p class="kicker">Driving lessons can be booked 7 days a week!</p>
                   </div>
@@ -159,34 +159,34 @@
 
 
       <!-- SERVICES Section -->
-      <section class="services">
+      <section id="services" class="flex-column">
         <h2 class="section-title">
             Our <span class="brand">Services</span>
          </h2>
          <div class="services-list">
           <div>
             <img src="assets/btw-icon.svg">
-            <h3>Behind-the-Wheel Lessons</h3>
+            <h3 class="px-20">Behind-the-Wheel Lessons</h3>
           </div>
           <div>
             <img src="assets/rtp-icon.svg">
-            <h3>Road Test Preparation</h3>
+            <h3 class="px-20">Road Test Preparation</h3>
           </div>
           <div>
             <img src="assets/dd-icon.svg">
-            <h3>Defensive Driving<h3>
+            <h3 class="px-20">Defensive Driving<h3>
           </div>
           <div>
             <img src="assets/pp-icon.svg">
-            <h3>Parallel Parking Practice</h3>
+            <h3 class="px-20">Parallel Parking Practice</h3>
           </div>
           <div>
             <img src="assets/hnd-icon.svg">
-            <h3>Highway and Night Driving</h3>
+            <h3 class="px-20">Highway and Night Driving</h3>
           </div>
           <div>
             <img src="assets/pd.svg">
-            <h3>Pick-up and Drop-off</h3>
+            <h3 class="px-20">Pick-up and Drop-off</h3>
           </div>
          </div>
       </section>
