made reviews section interactive and responsive

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
       <section id="services" class="flex-column">
         <h2 class="section-title">
             Our <span class="brand">Services</span>
-         </h2>
-         <div class="services-list">
+        </h2>
+        <div class="services-list">
           <div>
             <img src="assets/btw-icon.svg">
             <h3 class="px-20">Behind-the-Wheel Lessons</h3>
@@ -188,52 +188,102 @@
             <img src="assets/pd.svg">
             <h3 class="px-20">Pick-up and Drop-off</h3>
           </div>
-         </div>
+        </div>
       </section>
       <!-- INSTRUCTORS Section -->
-      <section class="instructors">
+      <section id="instructors" class="flex-column">
         <h2 class="section-title">
           Meet Our <span class="brand">Instructors</span>
         </h2>
         <div class="instructors-list">
           <div class="instructors-card">
             <img class="instructors-img" src="assets/instructor-jim.jpg">
-            <h3 class="instructors-name">Jim</h3>
-            <p class="instructors-role">Owner | Operator | Instructor</p>
+            <h3 class="instructors-name px-20">Jim</h3>
+            <p class="instructors-role px-16">Owner | Operator | Instructor</p>
           </div>
           <div class="instructors-card">
             <img class="instructors-img" src="assets/instructor-maria.jpg">
-            <h3 class="instructors-name">Maria</h3>
-            <p class="instructors-role">Senior Instructor</p>
+            <h3 class="instructors-name px-20">Maria</h3>
+            <p class="instructors-role px-16">Senior Instructor</p>
           </div>
           <div class="instructors-card">
             <img class="instructors-img" src="assets/instructor-sherri.jpg">
-            <h3 class="instructors-name">Sherri</h3>
-            <p class="instructors-role">Instructor</p>
+            <h3 class="instructors-name px-20">Sherri</h3>
+            <p class="instructors-role px-16">Instructor</p>
           </div>
           <div class="instructors-card">
             <img class="instructors-img" src="assets/instructor-dan.jpg">
-            <h3 class="instructors-name">Dan</h3>
-            <p class="instructors-role">Instructor</p>
+            <h3 class="instructors-name px-20">Dan</h3>
+            <p class="instructors-role px-16">Instructor</p>
           </div>
         </div>
       </section>
       <!-- REVIEWS Section -->
-      <section class="reviews">
-        <h2 class="section-title">
-          <span class="brand">Reviews</span> from our Previous Clients
-        </h2>
+ 
+    <section class="reviews flex-column">
+      <h2 class="section-title">
+        <span class="brand">Reviews</span> from our Previous Clients
+      </h2>
 
-        <div class="reviews-card">
-          <article class="reviews-content">
-            <h4>What Our Clients Say About Us</h4>
-            <p>&#34;The cars are quality cars and the people are professional.&#34;</p>
-            <hr>
-            <a href="#reviews"></a>
-          </article>
-          <img src="assets/google-4.8-rating.svg">
+      <div class="reviews-carousel">
+        <button class="reviews-prev">
+          <img src="assets/prev-icon.svg" alt="Previous">
+        </button>
+
+        <div class="reviews-slides">
+          <div class="reviews-card active flex-column">
+            <h4 class="h-32 fw-600">What Our Clients Say About Us</h4>
+            <p class="px-20">1 The cars are quality cars and the people are professional."</p>
+            <div>
+              <hr>
+              <a href="#reviews" class="review-link">
+                <img src="assets/google-4.8-rating.svg" alt="Google rating">
+              </a>
+            </div>
+          </div>
+
+          <div class="reviews-card flex-column">
+            <h4 class="h-32 fw-600">What Our Clients Say About Us</h4>
+            <p class="px-20">"2 The cars are quality cars and the people are professional 2."</p>
+            <div>
+              <hr>
+              <a href="#reviews" class="review-link">
+                <img src="assets/google-4.8-rating.svg" alt="Google rating">
+              </a>
+            </div>
+          </div>
+
+          <div class="reviews-card flex-column">
+            <h4 class="h-32 fw-600">What Our Clients Say About Us</h4>
+            <p class="px-20">"3 The cars are quality cars and the people are professional 3."</p>
+            <div>
+              <hr>
+              <a href="#reviews" class="review-link">
+                <img src="assets/google-4.8-rating.svg" alt="Google rating">
+              </a>
+            </div>
+          </div>
+
+          <div class="reviews-card flex-column">
+            <h4 class="h-32 fw-600">What Our Clients Say About Us</h4>
+            <p class="px-20">"4 The cars are quality cars and the people are professional 4."</p>
+            <div>
+              <hr>
+              <a href="#reviews" class="review-link">
+                <img src="assets/google-4.8-rating.svg" alt="Google rating">
+              </a>
+            </div>
+          </div>
         </div>
-      </section>
+
+        <button class="reviews-next">
+          <img src="assets/next-icon.svg" alt="Next">
+        </button>
+      </div>
+    </section>
+
+
+      
       <!-- GALLERY Section -->
       <section class="gallery">
         <h2 class="section-title">
