homepage is desktop responsive

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
       <!-- USE-OUR-CAR-LINK Section -->
       <section class="use-our-car-link">
-        <p>Need a car for your driving test?</p>
+        <p class="px-24">Need a car for your driving test?</p>
         <a href="#use-our-car">Use Our Car</a>
       </section>
     </main>
